Fix horizontal overflow scroll functionality

--- a/style.css
+++ b/style.css
@@ -40,11 +40,12 @@ button {
 
     display: flex;
     text-align: right;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
 
     /* scrollbar  */
 
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
     white-space: nowrap;
 
     max-width: 320px;
